# tex_rex_gui

./: meson.build  tk.texrex.app.json
data/: meson.build  tk.texrex.app.appdata.xml.in  tk.texrex.app.desktop.in  tk.texrex.app.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.cpp  meson.build  tex_rex-application.cpp  tex_rex-application.h  tex_rex-window.cpp  tex_rex-window.h  tex_rex-window.ui  tex_rex.gresource.xml  text_extractor.cpp  text_extractor.h
src/gtk/: help-overlay.ui
